--- a/pom.xml
+++ b/pom.xml
@@ -12,17 +12,17 @@
 	<artifactId>Koperasi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Koperasi</name>
-	<description>Koperai</description>
+	<description>Koperasi</description>
 	<properties>
 		<java.version>17</java.version>
 		<repackage.classifier/>
 		<spring-native.version>0.12.0</spring-native.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
