--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 server.error.include-stacktrace=never
+server.error.include-binding-errors=always
