--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 services:
   postgres:
-    container_name: postgres
+    container_name: koperasi_postgres
     image: postgres
     environment:
       POSTGRES_USER: koperasi
